Add a Conan package recipe.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,11 @@
 
 # Editor backup files
 *~
+
+# Conan artifacts
+conanbuild.sh
+conanbuildenv.sh
+conanrun.sh
+conanrunenv.sh
+deactivate_conanbuild.sh
+deactivate_conanrun.sh
